SubReddit v1/objects/SubReddit__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Social Networking</fullName>
                </value>
                <value>
                    <fullName>Viral</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Downvotes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Downvotes</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Upvotes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No Of Upvotes</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SubReddit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SubReddit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubReddit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>